updated transform anchor

--- a/onde-comprar.html
+++ b/onde-comprar.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Colic Calm - Onde comprar?</title>
+  <title>Colic Calm - Onde comprar</title>
   <link rel="stylesheet" href="dist/css/main.css">
   <link rel="stylesheet" href="dist/css/vendor.css">
   <link rel="sortcut icon" href="dist/img/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
-
   <header class="header">
     <div class="headerFull">
       <div class="headerFullCtn">
@@ -94,7 +93,6 @@
                 <span>Compartilhar</span>
               </button>
               <div>
-                <img src="dist/img/icon_header_socials.png" alt="">
                 <ul>
                   <li>
                     <a href="">
